# partial-differential-equation-solver

code/: CMakeLists.txt  main.cpp
code/include/calerf/: calerf.cpp
code/include/differentialEquationsSolver/: mesh.h
code/include/differentialEquationsSolver/ordinary/secondOrder/: secondOrderDiffEquationSolver.h
code/include/differentialEquationsSolver/partial/secondOrder/: KMBSolver.h  LaasonenSolver.h
code/include/equationSolver/: thomasSolver.h  triangularSolver.h
code/include/equationSolver/iteration/: SOREquationSolver.h  equationIterativeSolver.h  gausSeidelEquationSolver.h  jacobEquationSolver.h
code/include/matrix/: matrix.h  matrixCalc.h
code/include/matrix/view/: tripleDiagView.h
code/include/matrix_dec/LU/: luDecomp.h  operation.h
code/include/utils/: Utils.h
code/include/utils/intervals/: closedInterval.h
code/src/differentialEquationsSolver/: mesh.cpp
code/src/differentialEquationsSolver/ordinary/secondOrder/: secondOrderDifferentialEquationSolver.cpp
code/src/differentialEquationsSolver/partial/secondOrder/: KMBSolver.cpp  LaasonenSolver.cpp
code/src/equationSolver/: thomasSolver.cpp  triangularSolver.cpp
code/src/equationSolver/iteration/: SOREquationSolver.cpp  equationIterativeSolver.cpp  gausSeidelEquationSolver.cpp  jacobEquationSolver.cpp
code/src/matrix/: matrix.cpp  matrixCalc.cpp
code/src/matrix/view/: tripleDiagView.cpp
code/src/matrix_dec/LU/: luDecomp.cpp  operation.cpp
code/src/utils/intervals/: closedInterval.cpp
plots_and_data/KMB/data/: 0.1  KMB_BBW  KMB_DELTA_0_000976562_T_0_1.txt  (+2 more)
(+13 files in other folders)
